--- a/books/templates/books/user_page.html
+++ b/books/templates/books/user_page.html
@@ -26,9 +26,11 @@
                     <td class="h6 align-middle">{{ book.author }}</td>
                     <td class="align-middle"><a href="{% url 'book_detail' slug=book.slug %}" class="book-link">{{ book.title }}</a></td>
                     <td class="small-none h6 align-middle">{{ book.category }}</td>
-                    <td class="d-flex flex-row gap-1 justify-content-center align-middle">
-                        <a href="{% url 'book_edit' slug=book.slug %}" class="btn btn-primary btn-sm">Edit</a>
-                        <button class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#deleteModal{{ book.id }}">Delete</button>
+                    <td class="align-middle">
+                        <div class="d-flex align-items-center gap-1">
+                            <a href="{% url 'book_edit' slug=book.slug %}" class="btn btn-primary btn-sm">Edit</a>
+                            <button class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#deleteModal{{ book.id }}">Delete</button>
+                        </div>
                     </td>
                 </tr>
                  <!-- Delete Confirmation Modal -->
