Fix clear button appears on load if input field

--- a/books/templates/books/find_book.html
+++ b/books/templates/books/find_book.html
@@ -90,7 +90,7 @@
 
 {% else %}
 <div class="text-center">
-    <h3>No books found</h3>
+    <h3 class="pt-5">No books found</h3>
 </div>
 {% endif %}
 {% endblock %}
@@ -98,6 +98,18 @@
 {% block script %}
 
 // Function to clear the search field
+document.addEventListener('DOMContentLoaded', function() {
+    const inputField = document.querySelector('#input-search');
+    const clearSearch = document.getElementById('clearSearch');
+
+    if (inputField.value.length > 0) {
+        clearSearch.style.visibility = 'visible';
+    } else {
+        clearSearch.style.visibility = 'hidden';
+    }
+});
+
+
 document.querySelector('#input-search').addEventListener('keyup', function() {
     const clearSearch = document.getElementById('clearSearch');
     
