Fix Footer at the botom if possible

--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -210,27 +210,8 @@
     <script>
       {% block script %}
 
-      {% endblock %}
+      {% endblock %} 
     </script>
-    <script>
-      // Function to fade out and remove the alert after 5 seconds
-      function fadeOutAlert() {
-        const alerts = document.querySelectorAll('.alert');
-
-        alerts.forEach((alert) => {
-          setTimeout(() => {
-            alert.style.transition = 'opacity 1s';
-            alert.style.opacity = '0';
-
-            setTimeout(() => {
-              alert.remove();
-            }, 1000); // Remove the alert after fade out
-          }, 5000); // Delay for 5 seconds before starting to fade out
-        });
-      }
-
-      // Call the function when the page loads
-      window.addEventListener('load', fadeOutAlert);
-    </script>
+    <script src="{% static 'js/script.js' %}"></script>
   </body>
 </html>
