Fix unlike different font icon

--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -56,7 +56,7 @@
                         {% if request.user in book.likes.all %}
                             <i class="fa-solid fa-heart fa-beat text-danger"></i>
                         {% else %}
-                            <i class="fa-regular fa-thumbs-up fa-bounce text-danger"></i>
+                            <i class="fa-regular fa-heart fa-bounce text-primary"></i>
                         {% endif %}
                     </button>
                 </form>
