--- a/authors/templates/user_profile_update.html
+++ b/authors/templates/user_profile_update.html
@@ -1,6 +1,9 @@
 {% extends "books/base.html" %}
 
+{% load static %}
+
 {% block content %}
+
 <div class="container mt-5">
   <div class="row">
     <div class="col-md-6 offset-md-3">
@@ -16,22 +19,20 @@
             <div class="mb-3 text-center">
               <!-- Display the current profile image  -->
               {% if user.userprofile.profile_image and "profile_image" not in user.userprofile.profile_image.url %}
-            <img
-              id="profileImagePreview"
-              src="{{ user.userprofile.profile_image.url }}"
-              alt="Profile Image"
-              class="rounded-circle mx-auto d-block"
-              style="width: 150px; height: 150px"
-            />
-            {% else %}
-              <img
-                id="profileImagePreview"
-                src="https://web-photos-td.s3.eu-north-1.amazonaws.com/user.webp"
-                alt="Profile Image Default"
-                class="rounded-circle mx-auto d-block"
-                style="width: 150px; height: 150px"
-              />
-              {% endif %}
+                <img
+                  id="profileImagePreview"
+                  src="{{ user.userprofile.profile_image.url }}"
+                  alt="Profile Image"
+                  class="rounded-circle d-block mx-auto"
+                />
+              {% else %}
+                <img
+                  id="profileImagePreview"
+                  src="https://web-photos-td.s3.eu-north-1.amazonaws.com/user.webp"
+                  alt="Profile Image Default"
+                  class="rounded-circle d-block mx-auto"
+                />
+                {% endif %}
             </div>
             <div class="mb-3">
               {{ form.email.label_tag }}
@@ -77,5 +78,6 @@
     </div>
   </div>
 </div>
+
 {% endblock %}
 
