--- a/books/templates/books/user_favourites.html
+++ b/books/templates/books/user_favourites.html
@@ -3,49 +3,57 @@
 {% load static %}
 
 {% block content %}
-<div class="title text-center pt-4 h1">
-    <h1>{{ user.username|capfirst }}'s Favourites</h1>
-</div>
-{% if user.is_authenticated %}
-{% if books|length != 0 %}
-<div class="container pt-lg-4 pt-sm-2 col-lg-8">
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th class="small-none">#</th>
-                <th>Author</th>
-                <th>Title</th>
-                <th class="small-none">Category</th>
-                <th class="text-center"></th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for book in books %}
+    <div class="title text-center pt-4 h1">
+        <h1>{{ user.username|capfirst }}'s Favourites</h1>
+    </div>
+    {% if user.is_authenticated %} {% if books|length != 0 %}
+        <div class="container pt-lg-4 pt-sm-2 col-lg-8">
+            <table class="table table-striped">
+                <thead>
                 <tr>
-                    <td class="small-none align-middle">{{ forloop.counter }}</td>
-                    <td class="h6 align-middle">{{ book.author }}</td>
-                    <td class="align-middle"><a href="{% url 'book_detail' slug=book.slug %}" class="book-link">{{ book.title }}</a></td>
-                    <td class="small-none h6 align-middle">{{ book.category }}</td>
-                    <td class="text-center">
-                        <form method="post" action="{% url 'remove_from_favourites' slug=book.slug %}">
-                            {% csrf_token %}
-                            <button type="submit" class="btn btn-danger btn-sm "><i class="fa-solid fa-xmark fa-beat"></i></button>
-                        </form>
-                    </td>
+                    <th class="small-none">#</th>
+                    <th>Author</th>
+                    <th>Title</th>
+                    <th class="small-none">Category</th>
+                    <th class="text-center">Delete</th>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-</div>
-{% else %}
-<div class="text-center">
-    <h3>No favourite books yet</h3>
-</div>
-{% endif %}
-<div class="container text-center">
-    <a href="{% url 'find_book' %}" class="btn btn-outline-danger">Add to Favourites</a>
-</div>
-{% endif %}
-{% endblock %}
-{% block script %}
+                </thead>
+                <tbody>
+                    {% for book in books %}
+                        <tr>
+                            <td class="small-none align-middle">{{ forloop.counter }}</td>
+                            <td class="h6 align-middle">{{ book.author }}</td>
+                            <td class="align-middle">
+                            <a href="{% url 'book_detail' slug=book.slug %}" class="book-link"
+                                >{{ book.title }}</a
+                            >
+                            </td>
+                            <td class="small-none h6 align-middle">{{ book.category }}</td>
+                            <td class="text-center">
+                                <form
+                                    method="post"
+                                    action="{% url 'remove_from_favourites' slug=book.slug %}">
+                                    {% csrf_token %}
+                                    <button type="submit" class="btn btn-danger btn-sm">
+                                        <i class="fa-solid fa-xmark fa-beat"></i>
+                                    </button>
+                                </form>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    {% else %}
+        <div class="text-center">
+            <h3>No favourite books yet</h3>
+        </div>
+    {% endif %}
+
+    <div class="container text-center">
+        <a href="{% url 'find_book' %}" class="btn btn-outline-danger">Add to Favourites</a>
+    </div>
+
+    {% endif %}
+
 {% endblock %}
