--- a/authors/templates/authentication/login.html
+++ b/authors/templates/authentication/login.html
@@ -1,9 +1,9 @@
 {% extends 'books/base.html' %}
 
-{% block style %}
+{% load static %}
 
-{% endblock %}
 {% block content %}
+
 <div class="container mt-5 col-9 col-md-6 col-lg-4">
     <div class="text-center">
         <h2>Login</h2>
@@ -14,7 +14,6 @@
             {% csrf_token %}
             <input type="hidden" name="form_type" value="login">
             <div class="mb-3">
-                {% comment %} <label for="loginUsernameEmail" class="form-label">User Name</label> {% endcomment %}
                 <input type="text" class="form-control" id="loginUsernameEmail" placeholder="User Name or E-mail (required)" name="username_or_email" required>
             </div>
             <div class="mb-3">
@@ -24,6 +23,6 @@
             <p><button type="submit" class="btn btn-primary"> Login</button>  Don't have an account? Click <a class ="link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="{% url 'register' %}">here</a>.</p>
         </form>
     </div>
-
 </div>
+
 {% endblock %}
