--- a/books/templates/books/book_delete.html
+++ b/books/templates/books/book_delete.html
@@ -11,15 +11,13 @@
             {% if 'default' in book.image_url.url %}
             <img
               src="https://web-photos-td.s3.eu-north-1.amazonaws.com/default_book.webp"
-              class="card-img-top mx-auto"
-              style="width: 10rem"
+              class="card-img-top mx-auto book-image"
               alt="{{ book.title }} image"
             />
             {% else %}
             <img
               src="{{ book.image_url.url }}"
-              class="card-img-top mx-auto"
-              style="width: 10rem"
+              class="card-img-top mx-auto book-image"
               alt="{{ book.title }} image"
             />
             {% endif %}
@@ -52,6 +50,6 @@
         <div class="card-text">{{ book.short_description}}</div>
       </div>
     </div>
-    {% endblock %}
   </div>
 </div>
+{% endblock %}
