Add contact template view form and funcionality

--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -59,7 +59,7 @@
             </li>
             {% endif %}
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="{% url 'contact' %}">Contact</a>
             </li>
           </ul>
           <ul class="navbar-nav flex flex-column flex-lg-row mb-2 mb-lg-0 gap-1
