--- a/books/templates/books/home.html
+++ b/books/templates/books/home.html
@@ -31,7 +31,7 @@
   </h2>
   <div class="row container home-main align-items-center pb-lg-5">
     <div class="col-sm-6">
-      <div class="card border-0">
+      <div class="border-0">
         <div class="card-body">
           <div class="pb-3 d-none d-md-block">
             <img
