--- a/authors/templates/authentication/signup.html
+++ b/authors/templates/authentication/signup.html
@@ -1,7 +1,7 @@
 {% extends 'books/base.html' %}
 
-{% block style %}
-{% endblock %}
+{% load static %}
+
 {% block content %}
   
 <div class="container mt-5 col-9 col-md-6 col-lg-4">
