Fix Contact Form and emailJS functionality

--- a/authors/templates/contact.html
+++ b/authors/templates/contact.html
@@ -27,17 +27,17 @@
             <div class="mb-3">
                 {{ form.name }}
                 {{ form.name.errors }}
-                <input type="hidden" id="name" value="{{ form.name.value }}">
+                <!-- <input type="hidden" id="name" value="{{ form.name.value }}"> -->
             </div>
             <div class="mb-3">
                 {{ form.email }}
                 {{ form.email.errors }}
-                <input type="hidden" id="email" value="{{ form.email.value }}">
+                <!-- <input type="hidden" id="email" value="{{ form.email.value }}"> -->
             </div>
             <div class="mb-3">
                 {{ form.message }}
                 {{ form.message.errors }}
-                <input type="hidden" id="message" value="{{ form.message.value }}">
+                <!-- <input type="hidden" id="message" value="{{ form.message.value }}"> -->
             </div>
             <button type="submit" class="btn btn-primary">Send</button>
         </form>
