--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -5,9 +5,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Books for Life</title>
+    <meta name="author" content="Tomislav Dukez" />
+    <meta name="description" content="Explore book reviews on literature and life. Join our community of librophiles and discover your next favorite book." />
+    <meta name="keywords" content="books, life, literature, librophile, book reviews, Tomislav Dukez" />
+    <link rel="canonical" href="https://books-4-life-2d26bdf04dec.herokuapp.com/" />
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'images/site.webmanifest' %}">
 
     <!-- Bootstrap 5.0.2 links -->
-
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
