--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -38,8 +38,7 @@
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-    />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     {% block head %} {% endblock %}
   </head>
 
@@ -162,9 +161,10 @@
           <a
             class="btn text-white btn-floating m-1"
             style="background-color: #55acee"
-            href="#!"
+            href="https://twitter.com/"
+            target="_blank"
             role="button"
-            ><i class="fab fa-twitter"></i
+            ><i class="fa-brands fa-x-twitter"></i
           ></a>
 
           <!-- Google -->
