Fix position send button on contact page

--- a/authors/templates/contact.html
+++ b/authors/templates/contact.html
@@ -32,11 +32,13 @@
                 {{ form.email }}
                 {{ form.email.errors }}
             </div>
-            <div class="mb-3">
+            <div class="mb-2">
                 {{ form.message }}
                 {{ form.message.errors }}
             </div>
-            <button type="submit" class="btn btn-primary">Send</button>
+            <div class="form-group text-end">
+                <button type="submit" class="btn btn-primary">Send</button>
+            </div>
         </form>
     </div>
 </div>
