Add social media links

--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -152,35 +152,28 @@
           <a
             class="btn text-white btn-floating m-1"
             style="background-color: #3b5998"
-            href="#!"
+            href="https://www.facebook.com/profile.php?id=100013694132979"
+            target="_blank"
             role="button"
             ><i class="fab fa-facebook-f"></i
           ></a>
 
-          <!-- Twitter -->
+          <!-- X-Twitter -->
           <a
             class="btn text-white btn-floating m-1"
             style="background-color: #55acee"
-            href="https://twitter.com/"
+            href="https://twitter.com/tom_du3"
             target="_blank"
             role="button"
             ><i class="fa-brands fa-x-twitter"></i
-          ></a>
-
-          <!-- Google -->
-          <a
-            class="btn text-white btn-floating m-1"
-            style="background-color: #dd4b39"
-            href="#!"
-            role="button"
-            ><i class="fab fa-google"></i
           ></a>
 
           <!-- Instagram -->
           <a
             class="btn text-white btn-floating m-1"
             style="background-color: #ac2bac"
-            href="#!"
+            href="https://www.instagram.com/007idkfa/"
+            target="_blank"
             role="button"
             ><i class="fab fa-instagram"></i
           ></a>
@@ -189,15 +182,18 @@
           <a
             class="btn text-white btn-floating m-1"
             style="background-color: #0082ca"
-            href="#!"
+            href="https://www.linkedin.com/in/tomislav-dukez-bb2349231/"
+            target="_blank"
             role="button"
             ><i class="fab fa-linkedin-in"></i
           ></a>
+
           <!-- Github -->
           <a
             class="btn text-white btn-floating m-1"
             style="background-color: #333333"
-            href="#!"
+            href="https://github.com/tomdu3/"
+            target="_blank"
             role="button"
             ><i class="fab fa-github"></i
           ></a>
